--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,79 @@
   cursor: pointer;
 }
 
+.game-arrow-prev{
+  position: absolute;
+  right: 5% !important;
+  top: -29% !important;
+  font-size: 35px !important;
+  z-index: 1;
+  background-color: rgb(31 41 55 / 0.3) !important;
+  padding: 6px !important;
+  border-radius: 5px !important;
+  transition: .5s;
+  cursor: pointer;
+}
+
+.game-arrow-next {
+  position: absolute;
+  right: 1% !important;
+  top: -29% !important;
+  font-size: 35px !important;
+  z-index: 1;
+  background-color: rgb(31 41 55 / 0.3) !important;
+  padding: 6px !important;
+  border-radius: 5px !important;
+  transition: .5s;
+  cursor: pointer;
+}
+
 .slick-slider:hover .custom-arrow-next, .slick-slider:hover .custom-arrow-prev {
   opacity: 1 !important;
   transition: .5s;
+}
+
+
+.warning-toast::after{
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 5px;
+  background-color: #C2410C;
+  top: 60px;
+  animation: anim 8s linear forwards;
+}
+
+.success-toast::after{
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 5px;
+  background-color: #166534;
+  top: 60px;
+  animation: anim 8s linear forwards;
+}
+
+.error-toast::after{
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 5px;
+  background-color: #991B1B;
+  top: 60px;
+  animation: anim 8s linear forwards;
+}
+
+
+@keyframes anim {
+  
+  100%{
+    width: 0;
+  }
+
 }
