--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,28 @@
 .top-bg, .modal-header{
   background: linear-gradient(to right, #1B2746, #1D2129);
 }
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #757575; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #2d2d2d; 
+}
 
 .gradient-btn{
   background: linear-gradient(180deg,rgba(40,106,255,.1),rgba(40,106,255,.4) 94.78%,#286aff 94.79%);
@@ -149,9 +171,17 @@
   overflow: hidden;
 }
 
+.mobile-nav, .nav-toggle-2, .mobile-nav-backdrop-filter{
+  display: none !important;
+}
+
 @media screen and (max-width:900px) {
   .nav-toggle-1, .desktop-nav{
     display: none !important;
+  }
+
+  .nav-toggle-2,.mobile-nav{
+    display: block !important;
   }
 
   .mobile-view{
@@ -159,11 +189,19 @@
   }
 
   .mobile-nav{
-    position: absolute;
+    /* position: absolute; */
     left: -800px;
     top: 0;
     width: 70% !important;
     z-index: 10000;
+    transition: left 0.3s ease-in-out;
+  }
+
+  .mobile-nav-backdrop-filter{
+    left: -800px;
+    top: 0;
+    width: 100% !important;
+    z-index: 99999999;
     transition: left 0.3s ease-in-out;
   }
 
